# stasis

./: .clang-format  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  capture.c  main.c  meson.build  meson_options.txt  overlay.c  renovate.json  still.1.scd
.github/workflows/: create-release.yaml  pull-request.yaml  push.yaml
subprojects/Unity-2.6.1/: .meson-subproject-wrap-hash.txt
subprojects/Unity-2.6.1/.github/workflows/: main.yml
